force-app/main/default/objects/Opportunity/fields/Has_Primary_Value_Map__c.field-meta.xml
<CustomField>
    <fullName>Has_Primary_Value_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if this Opp has a Value Map marked as Primary</description>
    <label>Has Primary Value Map</label>
    <type>Checkbox</type>
</CustomField>