force-app/main/default/objects/Opportunity/fields/Highest_Stage_Reached__c.field-meta.xml
<CustomField>
    <fullName>Highest_Stage_Reached__c</fullName>
    <formula>IF( ISBLANK(Accept_Date__c), &quot;Stage 0&quot;, 
IF( ISBLANK(SQL_Date_15__c), &quot;Stage 1&quot;, 
IF( ISBLANK(Qualified_Pipeline_Date__c), &quot;Stage 2&quot;,
IF( ISBLANK(X50_Date__c),&quot;Stage 3&quot;,
IF( ISBLANK(X75_Date__c),&quot;Stage 4&quot;,
IF(  IsWon = FALSE &amp;&amp; ISBLANK(X99_Date__c), &quot;Stage 5&quot;, &quot;Won&quot;)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Stage Reached</label>
    <type>Text</type>
</CustomField>