force-app/main/default/objects/Opportunity/fields/How_will_I_respond_to_objections__c.field-meta.xml
<CustomField>
    <fullName>How_will_I_respond_to_objections__c</fullName>
    <description>This field is used for VVS (Vista Value Selling) Closing Plan.</description>
    <label>How will I respond to objections?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>