force-app/main/default/objects/Opportunity/fields/Ideal_Solution__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Solution__c</fullName>
    <inlineHelpText>We have all their ideals identified and layered, with examples. We know how they fit into the customer’s highest priorities.</inlineHelpText>
    <label>Ideal Solution</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>