force-app/main/default/objects/Opportunity/fields/Implementation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Amount__c</fullName>
    <label>Xactly Implementation Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>