force-app/main/default/objects/Opportunity/fields/In_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deals checked &quot;In Forecast&quot; are considered in the deal line of sales directors/VPs. Field is not visible to AEs or SDRs</inlineHelpText>
    <label>TO BE DELETED In Forecast</label>
    <type>Checkbox</type>
</CustomField>