force-app/main/default/objects/Opportunity/fields/In_Forecast_Text__c.field-meta.xml
<CustomField>
    <fullName>In_Forecast_Text__c</fullName>
    <formula>IF(In_Forecast__c = True, &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Forecast Text</label>
    <type>Text</type>
</CustomField>