force-app/main/default/objects/Opportunity/fields/Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound__c</fullName>
    <description>Updates an opportunity value to &quot;Inbound&quot; where a deal is partner sourced or is marketing sourced and the primary campaign value is not equal to blank/null.</description>
    <formula>IF(OR(AND( Marketing_Sourced__c = TRUE, Campaign.Id &lt;&gt;&quot;&quot;), Partner_Sourced__c = TRUE),&quot;Inbound&quot;,&quot;Outbound&quot;)</formula>
    <label>Inbound/Outbound</label>
    <type>Text</type>
</CustomField>