force-app/main/default/objects/Opportunity/fields/Incentive_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Date__c</fullName>
    <description>Date used to calculate commissions in Incent for Sales Reps, Sales Mgrs, Alliance Mgrs, and Solutions Consultants</description>
    <label>Incentive Date</label>
    <type>Date</type>
</CustomField>