force-app/main/default/objects/Opportunity/fields/Incentive_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Opportunity_Type__c</fullName>
    <description>Used to accommodate for when a deal is comped as one Order Type even if it&apos;s actually another Order Type (e.g. an AddOn of a new product that we&apos;d want to comp as if it were New Business)</description>
    <label>Incentive Opportunity Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>