force-app/main/default/objects/Opportunity/fields/Influencer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Engagement__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Have I successfully identified and engaged all individuals with greatest influence over the Decision Makers?</inlineHelpText>
    <label>Power Map: Influencer Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I know who all of the key Influencers are</fullName>
            </value>
            <value>
                <fullName>3 - I know who all the key Influencers are and the majority are supporters</fullName>
            </value>
            <value>
                <fullName>0 - Inadequate Influencer Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>