force-app/main/default/objects/Opportunity/fields/Initial_ARR__c.field-meta.xml
<CustomField>
    <fullName>Initial_ARR__c</fullName>
    <description>Allows for manual override of the ARR Growth amount if needed</description>
    <inlineHelpText>Allows for manual override of the ARR Growth amount if needed</inlineHelpText>
    <label>Initial ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>