force-app/main/default/objects/Opportunity/fields/Introduction_to_Customer_Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Introduction_to_Customer_Exec_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required to move to Stage 3</inlineHelpText>
    <label>Introduction to Customer Exec Sponsor</label>
    <type>Checkbox</type>
</CustomField>