force-app/main/default/objects/Opportunity/fields/Is_deal_worth_pursuing__c.field-meta.xml
<CustomField>
    <fullName>Is_deal_worth_pursuing__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <label>Given DSA Score, is deal worth pursuing?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>