force-app/main/default/objects/Opportunity/fields/IT_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>IT_Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Assessment Completed (if needed)</label>
    <type>Checkbox</type>
</CustomField>