force-app/main/default/objects/Opportunity/fields/Justin_Lane_Contacte_for_Plan_CDP_Review__c.field-meta.xml
<CustomField>
    <fullName>Justin_Lane_Contacte_for_Plan_CDP_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Justin Lane emailed on Plan/CDP Review</label>
    <type>Checkbox</type>
</CustomField>