force-app/main/default/objects/Opportunity/fields/Key_Threats__c.field-meta.xml
<CustomField>
    <fullName>Key_Threats__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Do I adequately understand all key threats and is my response is sufficient?</inlineHelpText>
    <label>Purchase Process: Key Threats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I understand the key threats to this deal</fullName>
            </value>
            <value>
                <fullName>3 - The buyers have confirmed that I&apos;ve adequately addressed the key threats</fullName>
            </value>
            <value>
                <fullName>0 - The key threats are insurmountable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>