force-app/main/default/objects/Opportunity/fields/Last_Push_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Push_Date__c</fullName>
    <label>Last Push Date</label>
    <type>Date</type>
</CustomField>