force-app/main/default/objects/Opportunity/fields/Lead_Gen_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Team__c</fullName>
    <label>Lead Gen Team</label>
    <length>10</length>
    <type>Text</type>
</CustomField>