force-app/main/default/objects/Opportunity/fields/Legacy_Incent_Enterprise_Customer__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Incent_Enterprise_Customer__c</fullName>
    <description>Used for Accounting purposes to evaluate if the customer originally bought the legacy &quot;Incent Enterprise&quot; that had different functionality and would be evaluated separately from new Incent Enterprise customers</description>
    <formula>IF( Account.Legacy_Incent_Enterprise_Customer__c &gt; 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Incent Enterprise Customer</label>
    <type>Checkbox</type>
</CustomField>