force-app/main/default/objects/Opportunity/fields/Legal_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approved_Date__c</fullName>
    <label>Legal Approved Date</label>
    <type>DateTime</type>
</CustomField>