force-app/main/default/objects/Opportunity/fields/Legal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notes__c</fullName>
    <label>Legal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>