force-app/main/default/objects/Opportunity/fields/Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review__c</fullName>
    <label>Legal Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>