force-app/main/default/objects/Opportunity/fields/MainCompetitor__c.field-meta.xml
<CustomField>
    <fullName>MainCompetitor__c</fullName>
    <description>DELETE?</description>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beqom</fullName>
            </value>
            <value>
                <fullName>Blitz</fullName>
            </value>
            <value>
                <fullName>Callidus</fullName>
            </value>
            <value>
                <fullName>Centive</fullName>
            </value>
            <value>
                <fullName>CloudComp</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Glocent</fullName>
            </value>
            <value>
                <fullName>Iconixx</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>Internal Build</fullName>
            </value>
            <value>
                <fullName>Makana</fullName>
            </value>
            <value>
                <fullName>Merced</fullName>
            </value>
            <value>
                <fullName>NetCommissions</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>nGenera - Iconixx</fullName>
            </value>
            <value>
                <fullName>Nirvaha</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Obero</fullName>
            </value>
            <value>
                <fullName>Optymyze</fullName>
            </value>
            <value>
                <fullName>Oracle OIC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performio</fullName>
            </value>
            <value>
                <fullName>QCommission</fullName>
            </value>
            <value>
                <fullName>Success Factors</fullName>
            </value>
            <value>
                <fullName>Surgesoft</fullName>
            </value>
            <value>
                <fullName>Synygy</fullName>
            </value>
            <value>
                <fullName>Varicent</fullName>
            </value>
            <value>
                <fullName>Vistex</fullName>
            </value>
            <value>
                <fullName>Westport Software Group</fullName>
            </value>
            <value>
                <fullName>Tactician Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>