force-app/main/default/objects/Opportunity/fields/Manager_Team_Credit_Test__c.field-meta.xml
<CustomField>
    <fullName>Manager_Team_Credit_Test__c</fullName>
    <label>Manager Team Credit Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brian Ellis</fullName>
            </value>
            <value>
                <fullName>Dell Thompson</fullName>
            </value>
            <value>
                <fullName>Evan Horibe</fullName>
            </value>
            <value>
                <fullName>John Knudsen</fullName>
            </value>
            <value>
                <fullName>Michael DelVecchio</fullName>
            </value>
            <value>
                <fullName>Mike Waldron</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Nora Khalili</fullName>
            </value>
            <value>
                <fullName>Patrick Morton</fullName>
            </value>
            <value>
                <fullName>Sean Murray</fullName>
            </value>
            <value>
                <fullName>Shane Fredrick</fullName>
                <label>Shane Frederick</label>
            </value>
            <value>
                <fullName>Sheila Gregory</fullName>
            </value>
            <value>
                <fullName>Steve DeMarco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>