force-app/main/default/objects/Opportunity/fields/Marketing_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determined if a marketing campaign or the lead gen team were involved in creating the opportunity.</description>
    <label>Marketing Sourced</label>
    <type>Checkbox</type>
</CustomField>