force-app/main/default/objects/Opportunity/fields/Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The master agreement this opportunity is related to. If no MSA exists, one must be created before the opportunity can be approved by legal.</inlineHelpText>
    <label>MSA</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Master Agreement)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>