force-app/main/default/objects/Opportunity/fields/Master_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Master_Opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Master Opportunity</label>
    <type>Checkbox</type>
</CustomField>