force-app/main/default/objects/Opportunity/fields/mediafly__Insights_Score__c.field-meta.xml
<CustomField>
    <fullName>mediafly__Insights_Score__c</fullName>
    <label>Insights Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>