force-app/main/default/objects/Opportunity/fields/Meeting_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cannot be unchecked</inlineHelpText>
    <label>Meeting Accepted</label>
    <type>Checkbox</type>
</CustomField>