force-app/main/default/objects/Opportunity/fields/mkto_si__Current_Sales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Current_Sales_Campaign__c</fullName>
    <label>Current Sales Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>