force-app/main/default/objects/Opportunity/fields/mkto_si__Last_Activity_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Last_Activity_By_Sales__c</fullName>
    <label>Last Activity by Sales</label>
    <type>DateTime</type>
</CustomField>