force-app/main/default/objects/Opportunity/fields/mkto_si__Last_Sales_Engagement__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Last_Sales_Engagement__c</fullName>
    <label>Last Sales Engagement</label>
    <type>DateTime</type>
</CustomField>