force-app/main/default/objects/Opportunity/fields/mkto_si__Sales_Last_Replied__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Sales_Last_Replied__c</fullName>
    <label>Sales Last Replied</label>
    <type>DateTime</type>
</CustomField>