force-app/main/default/objects/Opportunity/fields/Monthly_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee__c</fullName>
    <label>Total Monthly Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>