force-app/main/default/objects/Opportunity/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <formula>IF(CreatedBy.Profile.Name = &apos;Marketing User&apos;, 
CreatedDate, 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Date</label>
    <type>DateTime</type>
</CustomField>