force-app/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <formula>ARR_Bookings__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>