force-app/main/default/objects/Opportunity/fields/MSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_End_Date__c</fullName>
    <formula>SBQQ__RenewedContract__r.Parent_Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA End Date</label>
    <type>Date</type>
</CustomField>