force-app/main/default/objects/Opportunity/fields/Multi_Solution_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Multi_Solution_Modifier__c</fullName>
    <label>Multi Solution Modifier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>