force-app/main/default/objects/Opportunity/fields/Mutual_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Plan__c</fullName>
    <inlineHelpText>Enter the date the Mutual Plan letter/email has been delivered to the client.</inlineHelpText>
    <label>Mutual Plan Delivered</label>
    <type>Date</type>
</CustomField>