force-app/main/default/objects/Opportunity/fields/Mutual_Plan_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Plan_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check box if prospect has agreed to the Mutual Plan letter/email.</inlineHelpText>
    <label>Mutual Plan Accepted</label>
    <type>Checkbox</type>
</CustomField>