force-app/main/default/objects/Opportunity/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>Current Objectives/Motivation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>