force-app/main/default/objects/Opportunity/fields/Net_New_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Annual_Recurring_Revenue__c</fullName>
    <description>Roll Up Summary from Opportunity Products to show the Deal-Level Net New ARR</description>
    <inlineHelpText>Roll Up Summary from Opportunity Products to show the Deal-Level Net New ARR</inlineHelpText>
    <label>Net New Annual Recurring Revenue</label>
    <summarizedField>OpportunityLineItem.ARR_Growth__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>