force-app/main/default/objects/Opportunity/fields/Number_of_Primary_Partners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Primary_Partners__c</fullName>
    <label>Number of Primary Partners</label>
    <summaryFilterItems>
        <field>Opportunity_Partner__c.Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Partner__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>