force-app/main/default/objects/Opportunity/fields/Objectives_Success_Measures__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Success_Measures__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan.</description>
    <inlineHelpText>Do I adequately understand the key buyers&apos; objectives, including their success measures?</inlineHelpText>
    <label>Value Map: Objectives &amp; Success Measures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I&apos;m missing some objectives and/or success measures</fullName>
            </value>
            <value>
                <fullName>3 - I have all key details and the alignment to our solution is strong</fullName>
            </value>
            <value>
                <fullName>0 - Objectives &amp; Success Measures do not align with our solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>