force-app/main/default/objects/Opportunity/fields/OpenAir_Leakage_Date__c.field-meta.xml
<CustomField>
    <fullName>OpenAir_Leakage_Date__c</fullName>
    <description>OpenAir Leakage date for Legacy Active Opp migrated in</description>
    <label>Legacy OpenAir Leakage Date</label>
    <type>Date</type>
</CustomField>