force-app/main/default/objects/Opportunity/fields/OpenAir_Leakage_Reason__c.field-meta.xml
<CustomField>
    <fullName>OpenAir_Leakage_Reason__c</fullName>
    <description>OpenAir Leakage Reason for Legacy Opportunities. This will be on the Opp Line Item as go forward</description>
    <label>Legacy OpenAir Leakage Reason</label>
    <type>TextArea</type>
</CustomField>