force-app/main/default/objects/Opportunity/fields/OpenAir_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>OpenAir_Project_ID__c</fullName>
    <label>Legacy OpenAir Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>