force-app/main/default/objects/Opportunity/fields/Opp_Owner_Sales_Region_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Sales_Region_Stamp__c</fullName>
    <label>Opp Owner Sales Region Stamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>