force-app/main/default/objects/Opportunity/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <description>For all opportunities, including ones migrated from the previous SFDC instance, this shows the true age of the opportunity</description>
    <formula>if( IsClosed, if((CloseDate - Legacy_Created_Date__c)&lt;0,0,(CloseDate - Legacy_Created_Date__c)), TODAY() -  Legacy_Created_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>