force-app/main/default/objects/Opportunity/fields/Opportunity_Driver__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Driver__c</fullName>
    <label>Opportunity Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>