force-app/main/default/objects/Opportunity/fields/Opportunity_Origin__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Origin__c</fullName>
    <label>Opportunity Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>In-App Request</fullName>
            </value>
            <value>
                <fullName>Proactive Reach Out</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>