force-app/main/default/objects/Opportunity/fields/Opportunity_Partner_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner_Rollup__c</fullName>
    <description>Opportunity Partner Count WHERE Selling Role = Implementation</description>
    <label>Opportunity Partner Rollup</label>
    <summaryFilterItems>
        <field>Opportunity_Partner__c.Selling_Role__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Partner__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>