force-app/main/default/objects/Opportunity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Stage</label>
    <referenceTo>Opportunity_Stage__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>