force-app/main/default/objects/Opportunity/fields/Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Sub_Type__c</fullName>
    <description>Used by IT Integrations</description>
    <label>Order Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Contract Extension</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Early Renewal</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>