force-app/main/default/objects/Opportunity/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Used by IT Integrations</description>
    <inlineHelpText>AddOn includes to cross-sell and up-sell</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Overage</fullName>
            </value>
            <value>
                <fullName>Debooking</fullName>
            </value>
            <value>
                <fullName>Early Renewal</fullName>
            </value>
            <value>
                <fullName>Contract Extension</fullName>
            </value>
            <value>
                <fullName>Ramp Add</fullName>
            </value>
            <value>
                <fullName>Booked Ramp</fullName>
            </value>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>Prepaid Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>