force-app/main/default/objects/Opportunity/fields/Originating_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Originating_Campaign__c</fullName>
    <label>Originating Campaign</label>
    <length>150</length>
    <type>Text</type>
</CustomField>